--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-extensions==1.5.7
 django-filter==0.11.0
 django-jinja==1.4.1
 django-macaddress==1.3.2
+django-redis-metrics==0.9.0
 django-rest-swagger==0.3.4
 django-smart-selects==1.1.1
 djangorestframework==3.2.4
