Devices can be deleted now, URL route breadcrumbs, app bar.
- Working create device w/ redirect to detail view
- Working delete device w/ redirect to list view
- Placeholders for "loading" state implemented for device list/detail
  views
- Added simple breadcrumb using react-router-breadcrumbs. Needs work.
- Moved menu into Appbar as a dropdown. Not super pleased with this.

--- a/react-15.1.0/package.json
+++ b/react-15.1.0/package.json
@@ -41,11 +41,12 @@
     "react-notification": "^5.0.4",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
+    "react-router-breadcrumbs": "^1.0.13",
     "react-router-redux": "^4.0.4",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-api-middleware": "^1.0.2",
-    "redux-form": "^5.2.5",
+    "redux-form": "^6.0.0-alpha.15",
     "redux-form-material-ui": "^2.0.0",
     "redux-rest-resource": "^0.4.1",
     "redux-thunk": "^2.1.0"
