--- a/react-15.1.0/package.json
+++ b/react-15.1.0/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^2.2.4",
     "material-ui": "^0.15.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
@@ -44,11 +45,13 @@
     "react-router-breadcrumbs": "^1.0.13",
     "react-router-redux": "^4.0.4",
     "react-tap-event-plugin": "^1.0.0",
+    "react-ultimate-pagination": "^0.8.0",
     "redux": "^3.5.2",
     "redux-api-middleware": "^1.0.2",
     "redux-form": "^6.0.0-alpha.15",
     "redux-form-material-ui": "^2.0.0",
     "redux-rest-resource": "^0.4.1",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "underscore": "^1.8.3"
   }
 }
