--- a/react-15.1.0/package.json
+++ b/react-15.1.0/package.json
@@ -38,6 +38,7 @@
     "jquery": "^2.2.4",
     "material-ui": "^0.15.0",
     "react": "^15.1.0",
+    "react-at-rest": "^2.0.9",
     "react-dom": "^15.1.0",
     "react-notification": "^5.0.4",
     "react-redux": "^4.4.5",
