--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ django-extensions~=1.5.7
 django-filter~=0.15.3
 django-jinja~=1.4.1
 django-macaddress~=1.3.2
-django-rest-swagger~=0.3.5
+django-rest-swagger~=2.1.2
 django-smart-selects~=1.3.0
 djangorestframework~=3.5.0
 djangorestframework-bulk~=0.2.1
@@ -31,3 +31,9 @@ MarkupSafe~=0.23.0
 netaddr~=0.7.18
 PyYAML~=3.11.0
 static3~=0.6.1
+coreapi~=2.3.1
+coreschema~=0.0.4
+itypes~=1.1.0
+uritemplate~=3.0.0
+openapi-codec~=1.3.2
+simplejson~=3.11.1
