--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,8 @@ classifiers = [
     "Topic :: System :: Networking",
 ]
 dependencies = [
-    "coreapi>=2.3.3",
     "cryptography>=3.4",
+    "uritemplate>=3.0",
     "dj-static>=0.0.6",
     "django~=5.2.0",
     "django-extensions~=4.1",
